[package]
name = "reestr_back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-session = { version = "0.10.1", features = ["cookie-session"]}
actix-web = "4.11.0"
bcrypt = "0.17.0"
diesel = {version = "2.2.12", features = ["postgres_backend","postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = "1.0.219"
validator = { version = "0.20.0",features = ["derive"] }
rand = "0.9.2"
futures-util = "0.3.31"
lazy_static = "1.5.0"
chrono = "0.4.41"
simple_logger = "5.0.0"
